# llm-context-builder

./: .eslintrc.cjs  .gitignore  README.md  go.mod  go.sum  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
internal/datasources/: datasource.go
internal/datasources/filesystem/: datasource.go
internal/datasources/git/: datasource.go
internal/tokencounter/: tokencounter.go
internal/tokencounter/naive_fallback/: tokencounter.go
internal/tokencounter/tiktoken/: tokencounter.go
llm_context_builder/: __main__.py  main.py
llm_context_builder/datasources/: __init__.py  filesystem.py  interface.py
llm_context_builder/tokenizers/: __init__.py  base.py  gemini.py  naive.py  tiktoken.py  transformers.py
src/: index.py  index.ts
src/datasources/: interface.py  interface.ts
src/datasources/filesystem/: filesystem.ts  index.py
src/tokenizers/: interface.ts
src/tokenizers/gemini/: index.py  index.ts
src/tokenizers/naive/: index.py  index.ts
src/tokenizers/tiktoken/: index.py  index.ts
src/tokenizers/transformers/: index.py  index.ts
