[tool.poetry]
name = "llm-context-builder"
authors = ["Jun Siang Cheah <me@jscheah.me>"]
version = "0.1.0"
description = "A CLI tool for bundling files, git repositories, and websites into a single file for LLM consumption"

[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"
asyncio = "^3.4.3"
tiktoken = "^0.7.0"
transformers = "^4.44.0"
google-generativeai = "^0.7.2"
gitignore-parser = "^0.1.11"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
